WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
276686
[tvOS] Color pickers are invisible and cannot be dismissed
https://bugs.webkit.org/show_bug.cgi?id=276686
Summary
[tvOS] Color pickers are invisible and cannot be dismissed
Aditya Keerthi
Reported
2024-07-16 14:14:32 PDT
rdar://127010401
Attachments
Add attachment
proposed patch, testcase, etc.
Aditya Keerthi
Comment 1
2024-07-16 14:18:22 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/30883
EWS
Comment 2
2024-07-16 17:10:05 PDT
Committed
281028@main
(a45b58ba9dfd): <
https://commits.webkit.org/281028@main
> Reviewed commits have been landed. Closing PR #30883 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug