[tvOS] Color pickers are invisible and cannot be dismissed https://bugs.webkit.org/show_bug.cgi?id=276686 rdar://127010401

Reviewed by Richard Robinson.

* Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:
(createInputPeripheralWithView):

Disable presentation of color pickers on tvOS, matching watchOS.

Canonical link: https://commits.webkit.org/281028@main